jumping nav fix

--- a/styles/_global.sass
+++ b/styles/_global.sass
@@ -38,6 +38,9 @@ body, html
 .loading
   overflow: hidden
 
+  .discover
+    display: none
+
   #curtain
     visibility: visible
 
